# Bag-of-Visual-Words

./: CMakeLists.txt  README.md
html/: report.html
include/: BinLib.h  Kmeans.h  Kmeans_Flann.h  html_print.h  imageHistogram.h  parser.h  sifts.h  tools.h  types.h  utils.h  utils_html.h  utils_parser.h
src/: BinaryTest.cpp  BoVW.cpp  CMakeLists.txt  MainProject.cpp  sifts.cpp
